--- a/test/unit/expected_results/bafc_expected_results.yml
+++ b/test/unit/expected_results/bafc_expected_results.yml
@@ -1,32 +1,38 @@
+﻿---
 "03":
   available: false
   recall: true
   ill: true
   in_processing: false
 
+
 "04":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "05":
   available: false
   recall: true
-  ill: true
+  ill: false
   in_processing: false
+
 
 "06":
   available: false
   recall: true
-  ill: true
+  ill: false
   in_processing: false
+
 
 "07":
   available: false
-  # recall: false
-  ill: true
+  recall: false
+  ill: false
   in_processing: false
+
 
 "10":
   available: false
@@ -34,11 +40,13 @@
   ill: true
   in_processing: false
 
+
 "11":
   available: false
-  # recall: true
+  recall: true
   ill: true
   in_processing: false
+
 
 "12":
   available: false
@@ -46,35 +54,27 @@
   ill: true
   in_processing: false
 
+
 "15":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "16":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "17":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
-"18":
- available: false
- # recall: false
- ill: true
- in_processing: false
-
-"20":
-  available: false
-  # recall: false
-  ill: true
-  in_processing: false
 
 "30":
   available: false
@@ -82,11 +82,13 @@
   ill: true
   in_processing: false
 
+
 "31":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "32":
   available: false
@@ -94,11 +96,13 @@
   ill: true
   in_processing: false
 
+
 "33":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "34":
   available: false
@@ -106,53 +110,62 @@
   ill: true
   in_processing: false
 
+
 "35":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "36":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "37":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "38":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "40":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "41":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "42":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "43":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "50":
   available: true
@@ -166,11 +179,13 @@
   ill: true
   in_processing: false
 
+
 "52":
   available: true
   recall: true
   ill: true
   in_processing: false
+
 
 "53":
   available: true
@@ -178,53 +193,61 @@
   ill: true
   in_processing: false
 
+
 "54":
-  available: false
+  available: true
   recall: true
   ill: true
   in_processing: false
 
+
 "55":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "56":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "57":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "58":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "59":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
  
 "60":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "61":
-  available: false
+  available: true
   recall: true
   ill: true
   in_processing: false
+
 
 "62":
   available: true
@@ -232,23 +255,27 @@
   ill: true
   in_processing: false
 
+
 "63":
   available: false
   recall: true
   ill: true
   in_processing: false
 
+
 "64":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "65":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "66":
   available: false
@@ -256,23 +283,27 @@
   ill: true
   in_processing: false
 
+
 "67":
   available: false
   recall: true
   ill: true
   in_processing: false
 
+
 "68":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "69":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "70":
   available: true
@@ -280,29 +311,34 @@
   ill: true
   in_processing: false
 
+
 "72":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "74":
-  available: false
+  available: true
   recall: true
   ill: true
   in_processing: false
 
+
 "76":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "77":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "80":
   available: true
@@ -310,17 +346,20 @@
   ill: true
   in_processing: false
 
+
 "81":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
 
+
 "82":
   available: false
-  # recall: false
+  recall: false
   ill: true
   in_processing: false
+
 
 "84":
   available: false
@@ -328,11 +367,13 @@
   ill: true
   in_processing: false
 
+
 "85":
   available: false
   recall: false
   ill: true
   in_processing: false
+
 
 "86":
   available: false
@@ -340,26 +381,37 @@
   ill: true
   in_processing: false
 
-"90":
-  available: false
+
+"89":
+  available: true
   recall: true
   ill: true
   in_processing: false
 
+
+"90":
+  available: false
+  recall: true
+  ill: false
+  in_processing: false
+
+
 "95":
   available: false
-  # recall: false
-  ill: true
+  recall: false
+  ill: false
   in_processing: false
+
 
 "96":
   available: false
-  # recall: false
-  ill: true
+  recall: false
+  ill: false
   in_processing: false
+
 
 "97":
   available: false
-  # recall: false
-  ill: true
+  recall: false
+  ill: false
   in_processing: false
