--- a/test/unit/expected_results/tnsfo_expected_results.yml
+++ b/test/unit/expected_results/tnsfo_expected_results.yml
@@ -1,9 +1,11 @@
+﻿---
 "03":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "04":
   available: false
@@ -12,26 +14,30 @@
   in_processing: false
   offsite: false
 
+
 "05":
   available: false
   recall: false
-  ill: true
+  ill: false
   in_processing: false
   offsite: false
+
 
 "06":
   available: false
   recall: false
-  ill: true
+  ill: false
   in_processing: false
   offsite: false
+
 
 "07":
   available: false
   recall: false
-  ill: true
+  ill: false
   in_processing: false
   offsite: false
+
 
 "10":
   available: false
@@ -40,12 +46,14 @@
   in_processing: true
   offsite: true
 
+
 "11":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "12":
   available: false
@@ -54,12 +62,14 @@
   in_processing: true
   offsite: true
 
+
 "15":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "16":
   available: false
@@ -68,6 +78,7 @@
   in_processing: false
   offsite: false
 
+
 "17":
   available: false
   recall: true
@@ -75,19 +86,6 @@
   in_processing: true
   offsite: true
 
-"18":
- available: false
- recall: false
- ill: true
- in_processing: false
- offsite: false
-
-"20":
-  available: false
-  recall: false
-  ill: true
-  in_processing: false
-  offsite: false
 
 "30":
   available: false
@@ -96,12 +94,14 @@
   in_processing: true
   offsite: true
 
+
 "31":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "32":
   available: false
@@ -110,12 +110,14 @@
   in_processing: true
   offsite: true
 
+
 "33":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "34":
   available: false
@@ -124,12 +126,14 @@
   in_processing: true
   offsite: true
 
+
 "35":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "36":
   available: false
@@ -138,12 +142,14 @@
   in_processing: true
   offsite: true
 
+
 "37":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "38":
   available: false
@@ -152,12 +158,14 @@
   in_processing: true
   offsite: true
 
+
 "40":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "41":
   available: false
@@ -166,12 +174,14 @@
   in_processing: true
   offsite: true
 
+
 "42":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "43":
   available: false
@@ -180,12 +190,14 @@
   in_processing: false
   offsite: false
 
+
 "50":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "51":
   available: false
@@ -194,12 +206,14 @@
   in_processing: true
   offsite: true
 
+
 "52":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "53":
   available: false
@@ -208,12 +222,14 @@
   in_processing: false
   offsite: false
 
+
 "54":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "55":
   available: false
@@ -222,12 +238,14 @@
   in_processing: true
   offsite: true
 
+
 "56":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "57":
   available: false
@@ -236,12 +254,14 @@
   in_processing: true
   offsite: true
 
+
 "58":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "59":
   available: false
@@ -250,12 +270,14 @@
   in_processing: false
   offsite: false
 
+
 "60":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "61":
   available: false
@@ -264,12 +286,14 @@
   in_processing: true
   offsite: true
 
+
 "62":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "63":
   available: false
@@ -278,12 +302,14 @@
   in_processing: false
   offsite: false
 
+
 "64":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "65":
   available: false
@@ -292,12 +318,14 @@
   in_processing: false
   offsite: false
 
+
 "66":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "67":
   available: false
@@ -306,12 +334,14 @@
   in_processing: true
   offsite: true
 
+
 "68":
   available: false
-  # recall: false
+  recall: true
   ill: true
-  in_processing: false
-  # offsite: false
+  in_processing: true
+  offsite: true
+
 
 "69":
   available: false
@@ -320,12 +350,14 @@
   in_processing: false
   offsite: false
 
+
 "70":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "72":
   available: false
@@ -334,12 +366,14 @@
   in_processing: true
   offsite: true
 
+
 "74":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "76":
   available: false
@@ -348,12 +382,14 @@
   in_processing: true
   offsite: true
 
+
 "77":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
 
 "80":
   available: false
@@ -362,12 +398,14 @@
   in_processing: false
   offsite: false
 
+
 "81":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "82":
   available: false
@@ -376,12 +414,14 @@
   in_processing: false
   offsite: false
 
+
 "84":
   available: false
   recall: false
   ill: true
   in_processing: false
   offsite: false
+
 
 "85":
   available: false
@@ -390,6 +430,7 @@
   in_processing: false
   offsite: false
 
+
 "86":
   available: false
   recall: false
@@ -397,30 +438,42 @@
   in_processing: false
   offsite: false
 
-"90":
+
+"89":
   available: false
   recall: true
   ill: true
   in_processing: true
   offsite: true
+
+
+"90":
+  available: false
+  recall: true
+  ill: false
+  in_processing: true
+  offsite: true
+
 
 "95":
   available: false
   recall: true
-  ill: true
+  ill: false
   in_processing: true
   offsite: true
+
 
 "96":
   available: false
   recall: false
-  ill: true
+  ill: false
   in_processing: false
   offsite: false
+
 
 "97":
   available: false
   recall: true
-  ill: true
+  ill: false
   in_processing: true
   offsite: true
